[metadata]
name = pyboardgame
version = attr: boardgame.__version__
url = https://github.com/MasaMatsu/pyboardgame
description = The basement to develop board games with Python3
long_description = file: README.md
license: MIT
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Development Status :: 1 - Planning
    License :: OSI Approved :: MIT License

[options]
zip_safe = False
packages = find:
